- opened access to keyboard sensor actuator and device map